--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ code {
 }
 
 #root {
+  background-color: #001427;
   height: 100vh;
   width: 100vw;
 }
@@ -28,6 +29,24 @@ code {
   padding: 0 20px;
 }
 
-.garages {
-  display: none;
+.garage {
+  fill: #f25c54;
+}
+
+.garage:hover {
+  fill: #f4845f;
+  cursor: pointer;
+}
+
+.district {
+  fill: transparent;
+  stroke: #f25c54;
+  stroke-width: .5;
+}
+
+.street {
+  pointer-events: none;
+  fill: none;
+  stroke: #7d8597;
+  stroke-width: .3;
 }
