--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,42 @@ code {
   stroke: #7d8597;
   stroke-width: .3;
 }
+
+.m-loading {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: #f25c54;
+  color: white;
+  text-align: center;
+  z-index: 2;
+  transition: opacity 500ms ease-in-out;
+}
+
+
+.loading-circle {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+
+.loading-circle:after {
+  content: "";
+  display: block;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: 6px solid white;
+  border-color: white transparent white transparent;
+  animation: loading-animation 1s ease-in-out infinite;
+}
+
+@keyframes loading-animation {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
