--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -1,7 +1,7 @@
 h1 {
   margin: 0;
+  font-size: 50px;
   color: #FEFFFF;
-  text-align: center;
 }
 
 p {
@@ -11,8 +11,37 @@ p {
 .intro-container {
   max-width: 600px;
   margin: 0 auto;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .intro-button {
+  margin-top: 25px;
   width: 100%;
+}
+
+.car {
+  margin-top: 50px;
+}
+
+.car:hover {
+  animation: carMove 800ms ease-in-out infinite;
+}
+
+@keyframes carMove {
+  0% {
+    transform: rotate(0deg);
+  }
+  33% {
+    transform: rotate(2deg);
+  }
+  66% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
